2009.09.24: David Nichols
	* added binary_to_string() function

2009.09.23: David Nichols
	* fixed method resolution for in-object method calls when the target
	  method is static
	* fixed crash in parsing when a class with no parent classes
	  references a base class method of an existing class

2009.09.22: David Nichols
	* updated -= operator to operate on objects in the same manner as
	  hashes

2009.09.21: David Nichols
	* made it so that static methods can be called with normal method call
	  syntax again to maintain backwards compatibility with previous
	  versions of Qore
	* updated configure to select 64-bit compile mode by default on Darwin
	  10 or higher with i386

2009.09.17: David Nichols
	* renamed PRWLock to QoreRWLock and made it a public class

2009.09.16: David Nichols
	* fixed static method calls at the top level of a program

2009.09.15: David Nichols
	* fixed class implementation so that static and non-static methods
	  have indepedent name lists; so that a class can now implement a non-
	  static and a static method with the same name

2009.09.10: David Nichols
	* fixed type comparisons with external types

2009.09.08: David Nichols
	* fixed configure to ensure compiling in 32-bit mode on Darwin/OSX if
	  32-bit mode is selected
	* added missing documentation for FtpClient::getAsBinary() and
	  FtpClient::getAsString()

2009.09.02: David Nichols
	* added support for new generic destructor calling convention

2009.08.28: David Nichols
	* added rename() function to rename or move files
	* updated documentation

2009.08.26: David Nichols
	* added HTTPClient::isConnected() method

2009.08.24: Petr Vanek
	* fixed ARGV and QORE_ARGV init to avoid behaving like <NOTHING>

2009.08.23: David Nichols
	* added new copy constructor calling convention that includes a
	  constant reference to the QoreClass being instantiated

2009.08.21: David Nichols
	* added new constructor calling convention that includes a constant